kubernetes/go-app-service-nord.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-app-service
  namespace: dev
spec:
  type: NodePort
  selector:
    app: go-app # pods의 label 이름
  ports:
    - name: go-app-port1
      protocol: TCP
      port: 8080 # 서비스의 포트
      targetPort: 8080 # pod의 포트
      nodePort: 30001 # 노드의 포트, 노드는 서비스의 전단계에 있음, istio쓰면 이걸 쓰지 않아도 됨
    - name: go-app-port2
      protocol: TCP
      port: 8081 # 서비스의 포트
      targetPort: 8080 # pod의 포트
      nodePort: 30001 # 노드의 포트, 노드는 서비스의 전단계에 있음, istio쓰면 이걸 쓰지 않아도 됨

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: dev
spec:
  type: NodePort
  selector:
    app: nginx # pods의 label 이름
  ports:
    - name: nginx-port
      protocol: TCP
      port: 80 # 서비스의 포트
      targetPort: 80 # pod의 포트
