kubernetes/go-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-app-ingress
  namespace: dev
  annotations:
    ingressClassName: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: api.local
      http:
        paths:
          - path: /nginx
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
          - path: /go-app(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: go-app-service
                port:
                  number: 8080
